--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -7,11 +7,12 @@ padding.x = 5
 padding.y = 5
 dimensions.columns = 140
 dimensions.lines = 40
-decorations = "buttonless"
 startup_mode = "Windowed"
+decorations = "buttonless"
 
 [scrolling]
 history = 2000
+
 
 [general]
 
@@ -23,14 +24,11 @@ import = [
   "~/.config/alacritty/catppuccin-mocha.toml"
 ]
 
-[font]
+[font.normal]
+family = "UbuntuMono Nerd Font"
 
-normal.family = "Fira Code"
-bold.family = "Fira Code"
-italic.family = "Fira Code"
-bold_italic.family = "Fira Code"
-
-size = 13.0
+[font] 
+size = 15
 
 [env]
 TERM = "xterm-256color"
@@ -40,3 +38,8 @@ bindings = [
   { key = "D", mods = "Control|Shift", action = "Quit"},
   { key = "N", mods = "Control|Shift", action = "CreateNewWindow" } 
 ]
+
+[terminal]
+
+[terminal.shell]
+program = "tmux"
